<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.simplememo.view.main.MainActivity">

  <item
      android:id="@+id/action_done"
      android:title="@string/done"
      android:icon="@drawable/ic_done_24px"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/action_delete"
      android:title="@string/edit"
      android:icon="@drawable/ic_delete_24px"
      app:showAsAction="ifRoom"/>
</menu>
