<resources>
    <string name="app_name">SimpleMemo</string>
    <string name="action_settings">Settings</string>

    <string name="memo_list">메모 목록</string>
    <string name="add_memo">메모 작성</string>
    <string name="detail_memo">메모 상세</string>
    <string name="edit_memo">메모 수정</string>

    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="transitionName">shared</string>

    <string name="save_complete">메모 작성 완료.</string>
    <string name="error_memo_empty">메모를 입력해주세요.</string>
    <string name="remove_complete">메모 삭제 완료.</string>

</resources>
