<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="position"
        type="Integer" />

    <variable
        name="viewModel"
        type="com.example.simplememo.view.memolist.MemoListViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:background="@drawable/ripple_item_memo"
      android:onClick="@{()->viewModel.startAddMemo(position)}"
      app:elevation="4dp">

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>