<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewModel"
        type="com.example.simplememo.view.memolist.MemoListViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#fefefe">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMemoList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:item="@{viewModel.memoList}"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:viewModel="@{viewModel}" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>